exports[`<SummaryCard /> render testing matches snapshot 1`] = `
<div
  className="card-wrapper">
  <a
    className="card-focus has-shadow"
    href="/app/undefined"
    onClick={[Function anonymous]}>
    <div
      className="card-container">
      <div
        className="card-badge">
        <img
          alt="Endorsed app"
          src="../../images/fn_badge.svg" />
      </div>
      <div
        className="card-logo">
        <img
          alt="app name Logo"
          src="../../images/app-icon.png" />
      </div>
      <section
        className="card-info">
        <div
          className="card-name">
          app name
        </div>
        <div
          className="card-publisher hidden-xs">
          publisher name
        </div>
      </section>
      <div
        className="card-rating">
        <div
          className="ratings-container">
          <span
            className="ratings-number">
            <span
              className="sr-only">
              Rating of
            </span>
            3.5
          </span>
          <span
            className="ratings-stars">
            <span
              aria-hidden="true"
              className="ratings-star icon-star" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star-half-o" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star-o" />
          </span>
        </div>
      </div>
      <div
        className="card-platform">
        <span
          className="sr-only">
          Hosted at the 
        </span>
        ANDROID
        <span
          className="sr-only">
           app store
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`<SummaryCard /> render testing matches snapshot 2`] = `
<div
  className="card-wrapper">
  <a
    className="card-focus has-shadow"
    href="/app/undefined"
    onClick={[Function anonymous]}>
    <div
      className="card-container">
      <div
        className="card-logo">
        <img
          alt="app name Logo"
          src="../../images/app-icon.png" />
      </div>
      <section
        className="card-info">
        <div
          className="card-name">
          app name
        </div>
        <div
          className="card-publisher hidden-xs">
          publisher name
        </div>
      </section>
      <div
        className="card-rating">
        <div
          className="ratings-container">
          <span
            className="ratings-number">
            <span
              className="sr-only">
              Rating of
            </span>
            1.5
          </span>
          <span
            className="ratings-stars">
            <span
              aria-hidden="true"
              className="ratings-star icon-star" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star-half-o" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star-o" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star-o" />
            <span
              aria-hidden="true"
              className="ratings-star icon-star-o" />
          </span>
        </div>
      </div>
      <div
        className="card-platform">
        <span
          className="sr-only">
          Hosted at the 
        </span>
        IOS
        <span
          className="sr-only">
           app store
        </span>
      </div>
    </div>
  </a>
</div>
`;
